2013-04-06  Zan Dobersek  <zdobersek@igalia.com>

        Remove the remaining PLATFORM(CHROMIUM) guard in JavaScriptCore
        https://bugs.webkit.org/show_bug.cgi?id=114082

        Reviewed by Ryosuke Niwa.

        * runtime/JSExportMacros.h: Remove the remaining PLATFORM(CHROMIUM) guard.

2013-04-06  Ed Bartosh  <bartosh@gmail.com>

        --minimal build fails with error: control reaches end of non-void function
        https://bugs.webkit.org/show_bug.cgi?id=114085

        Reviewed by Oliver Hunt.

        * interpreter/Interpreter.cpp: return 0 if JIT is not enabled
        (JSC::getBytecodeOffsetForCallFrame):

2013-04-06  Geoffrey Garen  <ggaren@apple.com>

        Try to fix the Windows build.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreExports.def:
        Added back a symbol that is exported.

2013-04-06  Geoffrey Garen  <ggaren@apple.com>

        Try to fix the Windows build.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreExports.def:
        Removed symbols that aren't exported.

2013-04-06  Geoffrey Garen  <ggaren@apple.com>

        Rolled out 147820 and 147818 because they caused plugins tests to ASSERT
        https://bugs.webkit.org/show_bug.cgi?id=114094

        Reviewed by Anders Carlsson.

        * API/JSContextRef.cpp:
        (JSContextCreateBacktrace):
        * bytecompiler/BytecodeGenerator.cpp:
        (JSC::BytecodeGenerator::emitDebugHook):
        * interpreter/Interpreter.cpp:
        (JSC):
        (JSC::Interpreter::dumpRegisters):
        (JSC::Interpreter::unwindCallFrame):
        (JSC::getLineNumberForCallFrame):
        (JSC::getCallerInfo):
        (JSC::Interpreter::getStackTrace):
        (JSC::Interpreter::addStackTraceIfNecessary):
        (JSC::Interpreter::retrieveCallerFromVMCode):
        * interpreter/Interpreter.h:
        (StackFrame):
        (JSC::StackFrame::toString):
        (JSC::StackFrame::friendlyLineNumber):
        (Interpreter):
        * runtime/Error.cpp: